--- a/waveform/src/main/res/values/styles.xml
+++ b/waveform/src/main/res/values/styles.xml
@@ -1,18 +1,8 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-
-
     <style name="AudioFileInfoOverlayText">
-        <item name="android:paddingLeft">4px</item>
-        <item name="android:paddingBottom">4px</item>
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
         <item name="android:textColor">#ffffffff</item>
         <item name="android:textSize">12sp</item>
         <item name="android:shadowColor">#000000</item>
@@ -31,33 +21,33 @@
     </style>
 
     <style name="VerticalDividerForList">
-        <item name="android:layout_width">1px</item>
+        <item name="android:layout_width">1dp</item>
         <item name="android:layout_height">fill_parent</item>
-        <item name="android:layout_marginLeft">4px</item>
+        <item name="android:layout_marginLeft">4dp</item>
         <item name="android:background">#444444</item>
     </style>
 
     <style name="VerticalDividerLeft">
-        <item name="android:layout_width">1px</item>
+        <item name="android:layout_width">1dp</item>
         <item name="android:layout_height">fill_parent</item>
-        <item name="android:layout_marginLeft">4px</item>
+        <item name="android:layout_marginLeft">4dp</item>
         <item name="android:background">#666677</item>
     </style>
     <style name="VerticalDividerRight">
-        <item name="android:layout_width">1px</item>
+        <item name="android:layout_width">1dp</item>
         <item name="android:layout_height">fill_parent</item>
-        <item name="android:layout_marginRight">4px</item>
+        <item name="android:layout_marginRight">4dp</item>
         <item name="android:background">#000022</item>
     </style>
 
     <style name="HorizontalDividerTop">
         <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">1px</item>
+        <item name="android:layout_height">1dp</item>
         <item name="android:background">#666677</item>
     </style>
     <style name="HorizontalDividerBottom">
         <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">1px</item>
+        <item name="android:layout_height">1dp</item>
         <item name="android:background">#000022</item>
     </style>
 
